405734  PPC64, vrlwnm, vrlwmi, vrldrm, vrldmi do not work properly when me < mb
405782  "VEX temporary storage exhausted" when attempting to debug slic3r-pe
406198  none/tests/ppc64/test_isa_3_0_other test sporadically including CA
        bit in output.
406352  cachegrind/callgrind fails ann tests because of missing a.c
406354  dhat is broken on x86 (32bit)
406360  memcheck/tests/libstdc++.supp needs more supression variants

n-i-bz  add syswrap for PTRACE_GET|SET_THREAD_AREA on amd64.
n-i-bz  Fix callgrind_annotate non deterministic order for equal total
n-i-bz  callgrind_annotate --threshold=100 does not print all functions.
n-i-bz  callgrind_annotate Use of uninitialized value in numeric gt (>)
n-i-bz  amd64 (x86_64): RDRAND and F16C insn set extensions are supported

(3.15.0.RC1: 8 April 2019, git ce94d674de5b99df173aad4c3ee48fc2a92e5d9c)



Release 3.14.0 (9 October 2018)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.14.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.  There is also preliminary
support for X86/macOS 10.13, AMD64/macOS 10.13.

* ==================== CORE CHANGES ===================

* The new option --keep-debuginfo=no|yes (default no) can be used to retain
  debug info for unloaded code.  This allows saved stack traces (e.g. for
  memory leaks) to include file/line info for code that has been dlclose'd (or
  similar).  See the user manual for more information and known limitations.

* Ability to specify suppressions based on source file name and line number.

* Majorly overhauled register allocator.  No end-user changes, but the JIT
  generates code a bit more quickly now.

* ================== PLATFORM CHANGES =================
